SEO parannettu artikkeleihin

--- a/roytakanen.html
+++ b/roytakanen.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Roy Takanen</title>
     <meta name="author" content="Roy Takanen">
+    <meta name="google-site-verification" content="vwKLhUPgVcSFJAquU0rMsGmhbd-U7rgqiQTBbQKuudw" />
     <meta name="description" content="Roy Takasen sivusto. Pieni esittely itsestäni.">
     <meta name="keywords" content="Roy Takanen, roy.takanen.eu, r.takanen.eu, kaikkitietokoneista">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
