--- a/roytakanen.html
+++ b/roytakanen.html
@@ -29,6 +29,16 @@
         text-decoration: underline;
       }
 
+      a .alas {
+        position: absolute;
+        bottom: 0;
+      }
+
+      .oikea {
+        float: right;
+        /* JATKA */
+      }
+
       .kotisivut {
         border-radius: 5px;
         background-color: #ccc;
@@ -36,30 +46,42 @@
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
         font-weight: 500;
       }
+
+      .kaks5 {
+        width: 25%;
+        float: left;
+      }
+
+      .seiska5 {
+        width: 75%;
+        float: left;
+      }
     </style>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>  </head>
   <body>
     <header>
-
+      <center><h1><u>Roy Takanen</u></h1></center>
+      <center>
+        <p>
+          <a href="https://twitter.com/RoyTakanen?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @RoyTakanen</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/kaikkitietokoneista" aria-label="Follow @kaikkitietokoneista on GitHub">Follow @kaikkitietokoneista</a>
+        </p>
+      </center>
     </header>
-    <center><h1><u>Roy Takanen</u></h1></center>
-    <center>
-      <p>
-        <a href="https://twitter.com/RoyTakanen?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @RoyTakanen</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <!-- Place this tag where you want the button to render. -->
-        <a class="github-button" href="https://github.com/kaikkitietokoneista" aria-label="Follow @kaikkitietokoneista on GitHub">Follow @kaikkitietokoneista</a>
-      </p>
-    </center>
     <hr>
-    <p>
-      Tämä on ylädomain useimmille projekteilleni.
-    </p>
-    <p>
-      Ohjeita tietotekniikkaan ja palvelimien myyntiä ylläolevalta henkilöltä osoitteessa <a href="https://kaikkitietokoneista.net">kaikkitietokoneista.net</a>.
-    </p>
+    <div class="seiska5">
+      <p>
+        Tämä on ylädomain useimmille projekteilleni.
+      </p>
+      <p>
+        Ohjeita tietotekniikkaan ja palvelimien myyntiä ylläolevalta henkilöltä osoitteessa <a href="https://kaikkitietokoneista.net">kaikkitietokoneista.net</a>.
+      </p>
+      </div>
     </div>
-    <footer>
-    </footer>
+    <div class="kaks5">
+      <a class="oikea alas" href="https://kaikkitietokoneista.github.io/joulukalenteri/"><img width="100" title="Joulukalenteri" src="https://kaikkitietokoneista.github.io/joulukalenteri/icon.png" alt="Joulukalenteri"></a>
+    </div>
   </body>
 </html>
